--- a/css/style.css
+++ b/css/style.css
@@ -165,10 +165,9 @@ button {
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #ffffff;
-  cursor: pointer;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .order-servise-btn:hover,
 .order-servise-btn:focus {
   background: #404bbf;
@@ -427,6 +426,58 @@ button {
 .foot-soc-icon {
   fill: #f4f4fd;
 }
+/* sub */
+.sub-cont {
+  align-items: flex-end;
+  margin-left: auto;
+}
+.sub-form {
+  display: flex;
+  gap: 24px;
+}
+.sub-input {
+  width: 264px;
+  height: 40px;
+  padding: 8px 16px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  border: 1px solid #ffffff;
+  background-color: transparent;
+  border-radius: 4px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+}
+.sub-input::placeholder {
+  color: #ffffff;
+}
+.sub-input:focus {
+  border: 1px solid #4d5ae5;
+  outline: none;
+}
+.foot-sub-btn {
+  min-width: 165px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-weight: 500;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  background-color: #4d5ae5;
+  padding: 8px 24px;
+  border-radius: 4px;
+  border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.foot-sub-btn:hover,
+.foot-sub-btn:focus {
+  background-color: #404bbf;
+}
+/* .plane-icon {
+  margin-left: 16px;
+} */
 
 .backdrop {
   position: fixed;
@@ -435,7 +486,6 @@ button {
   width: 100%;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
-
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
@@ -542,7 +592,8 @@ button {
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-input:focus {
+.modal-input:focus,
+.modal-input:hover {
   border: 1px solid #4d5ae5;
 }
 .input-icon {
@@ -554,6 +605,66 @@ button {
   cursor: pointer;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-input:focus + .input-icon {
+.modal-input:focus + .input-icon,
+.modal-input:hover + .input-icon {
   fill: #4d5ae5;
+}
+.comment-cont {
+  margin-bottom: 16px;
+}
+.comment-input {
+  width: 100%;
+  height: 120px;
+  resize: none;
+  padding: 8px 16px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  background-color: transparent;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.comment-input::placeholder {
+  color: rgba(46, 47, 66, 0.4);
+}
+
+.comment-input:focus,
+.comment-input:focus {
+  border: 1px solid #4d5ae5;
+}
+.policy-cont {
+  display: flex;
+  align-items: center;
+  margin-bottom: 24px;
+}
+.policy-label {
+  font-size: 12px;
+  color: #8e8f99;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+}
+.policy-link {
+  text-decoration: underline;
+  color: #4d5ae5;
+}
+.check-input {
+  display: inline-flex;
+  width: 16px;
+  height: 16px;
+  align-items: center;
+  justify-content: center;
+  margin-right: 8px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  fill: transparent;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.policy-inpcheck:checked + .policy-label > .check-input {
+  background-color: #404bbf;
+  fill: #f4f4fd;
+  border: none;
 }
