--- a/css/style.css
+++ b/css/style.css
@@ -561,7 +561,7 @@ button {
   letter-spacing: 0.02em;
   text-align: center;
   margin-bottom: 16px;
-  color: #2E2F4;
+  color: #2e2f42;
 }
 .modal-form {
 }
